--- a/01-accordian.html
+++ b/01-accordian.html
@@ -7,11 +7,12 @@
   <title>Accordian Component</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="styleAccordian.css" />
+  <script src="01-accordian.js"></script>
 </head>
 
 <body>
   <div class="accordion">
-    <div class="item">
+    <div class="item" id="1" onclick="whichItem(1)">
       <p class="number">01</p>
       <p class="text">Where are these chairs assembled?</p>
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
@@ -34,7 +35,7 @@
       </div>
     </div>
 
-    <div class="item open">
+    <div class="item" id="2" onclick="whichItem(2)">
       <p class="number">02</p>
       <p class="text">How long do I have to return my chair?</p>
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
@@ -56,7 +57,7 @@
         </ul>
       </div>
     </div>
-    <div class="item">
+    <div class="item" id="3" onclick="whichItem(3)">
       <p class="number">03</p>
       <p class="text">Do you ship to countries outside the EU?</p>
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
