--- a/02-carousel.html
+++ b/02-carousel.html
@@ -29,8 +29,13 @@
     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="btn-icon">
       <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
     </svg>
-    
   </button>
+   <div class="dots">
+    <button class="dot dot--fill">&nbsp;</button>
+    <button class="dot">&nbsp;</button>
+    <button class="dot">&nbsp;</button>
+    <button class="dot">&nbsp;</button>
+   </div>
 </div>
 </body>
 
