--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -3,10 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
   <title>Omnifood</title>
 </head>
 <body>
+  <header class="header">
+    <a href="#">
+      <img class="logo" alt="Omnifood logo" src="img/omnifood-logo.png" />
+    </a>
+    <nav class="main-nav">
+      <ul class="main-nav-list">
+        <li><a class="main-nav-link" href="#">How it works</a></li>
+        <li><a class="main-nav-link" href="#">Meals</a></li>
+        <li><a class="main-nav-link" href="#">Testimonials</a></li>
+        <li><a class="main-nav-link" href="#">Pricing</a></li>
+        <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
+      </ul>
+    </nav>
+  </header>
   <section class="section-hero">
     <div class="hero">
 
@@ -17,9 +34,21 @@
         <p class="hero-description">
           The smart 365-days-per-year food subscription that will make you eat healthy again. Tailored to your personal tastes and nutritional needs. We have delivered 250,000+ meals last year!
         </p>
-        <a href="#" class="btn btn--full">Start Eating Well</a>
+        <a href="#" class="btn btn--full margin-right-sm">Start Eating Well</a>
         <a href="#" class="btn btn--outline">Learn more &darr;</a>l
-        
+        <div class="delivered-meals">
+          <div class="delivered-imgs">
+            <img src="img/customers/customer-1.jpg" alt="Customer photo" />
+            <img src="img/customers/customer-2.jpg" alt="Customer photo" />
+            <img src="img/customers/customer-3.jpg" alt="Customer photo" />
+            <img src="img/customers/customer-4.jpg" alt="Customer photo" />
+            <img src="img/customers/customer-5.jpg" alt="Customer photo" />
+            <img src="img/customers/customer-6.jpg" alt="Customer photo" />
+          </div>
+          <p class="delivered-text">
+            <span>250,000+</span> meals delivered last year!
+          </p>
+        </div>
       </div>
       <div class="hero-img-box">
         <img src="img/hero.png" class="hero-img" alt="Woman enjoying food, meals in storage container, and food bowls on a table"/>
