omni food upto navbar, homepage styling

--- a/01-accordian.html
+++ b/01-accordian.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="accordion">
+  <div class="accordion" id="example1234">
     <div class="item" id="1" onclick="whichItem(1)">
       <p class="number">01</p>
       <p class="text">Where are these chairs assembled?</p>
@@ -80,6 +80,9 @@
       </div>
     </div>
   </div>
+
+  <!-- <div id="example1234"></div> -->
+
 </body>
 
 </html>
